fix: el-scrollbar wrap-style没有生效、原生滚动条没有隐藏

--- a/packages/theme/css/page/_dialog.scss
+++ b/packages/theme/css/page/_dialog.scss
@@ -252,6 +252,7 @@
   }
 
   &--content {
+    display: block;
     background-color: $color-grey-10;
     color: $color-grey-1;
     font-size: 12px;
@@ -269,6 +270,7 @@
   @include base-dialog();
 
   &--content {
+    display: block;
     background-color: $color-grey-10;
   }
 
